syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.content.client.v1";

package com.glance.spaces.content.client.v1;

import "com/glance/spaces/common/common_client_params.proto";
import "com/glance/spaces/snp/snp_params.proto";
import "validate/validate.proto";

message ClientL0Message {
  common.CommonClientParams common_params = 1 [(validate.rules).message.required = true];
  snp.SnpParams snp_params = 2;
}